lfpubs2m/src/main/java/edu/casetools/lfpubs2m/compiler/LFPUBSCompiler.java
/* Generated By:JavaCC: Do not edit this line. LFPUBSCompiler.java */
package edu.casetools.lfpubs2m.compiler;
import java.io.FileReader;
import java.util.Vector;

import edu.casetools.lfpubs2m.lfpubsdata.LFPUBSPattern;
import edu.casetools.lfpubs2m.lfpubsdata.condition.IfContext;
import edu.casetools.lfpubs2m.lfpubsdata.condition.time.TimeOfDay;
import edu.casetools.lfpubs2m.lfpubsdata.action.ThenDo;
import edu.casetools.lfpubs2m.lfpubsdata.events.Occurs;
import edu.casetools.lfpubs2m.lfpubsdata.events.Sensor;


public class LFPUBSCompiler implements LFPUBSCompilerConstants {
public static void main(String[] args) {
try{
LFPUBSCompiler parser = new LFPUBSCompiler (new FileReader("C:/LFPUBS/test.txt"));
        parser.translate();

System.out.println("SYNTAX TEXT OK");
}catch (Exception ex)
{ex.printStackTrace() ;}
}

  final public void translate() throws ParseException {
        int mapId = 0;
        Vector<LFPUBSPattern> patterns = new Vector<LFPUBSPattern>();
        LFPUBSPattern auxiliarPattern = null;
    mapId = actionMapId();
    generalConditions();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ACTION_PATTERN:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      auxiliarPattern = pattern(mapId);
                                       patterns.add(auxiliarPattern);
    }
    jj_consume_token(0);
          for(int i=0;i<patterns.size();i++)
          {

          System.out.println(patterns.get(i).printPattern());
          }
                  System.out.println("END");
  }

  final public int actionMapId() throws ParseException {
  String id = "";
  Token t;
    jj_consume_token(ACTION_MAP);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DIGIT:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      t = jj_consume_token(DIGIT);
          id = id + t.toString();
    }
          {if (true) return Integer.parseInt(id);}
    throw new Error("Missing return statement in function");
  }

  final public void generalConditions() throws ParseException {
  Token t;
    jj_consume_token(LEFT_BRACKET);
    jj_consume_token(GENERAL_CONDITIONS);
    jj_consume_token(RIGHT_BRACKET);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF_CONTEXT:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_3;
      }
      condition();
    }
  }

  final public LFPUBSPattern pattern(int actionMapId) throws ParseException {
  LFPUBSPattern     pattern     = new LFPUBSPattern();
  Occurs          onOccurs    = null;
  IfContext   ifContext = null;
  ThenDo      thenDo      = null;
  int             patternId   = 0;
    patternId = patternID();
                  pattern.setId(actionMapId+"_"+patternId);
    onOccurs = event();
                  pattern.setEvent(onOccurs);
    ifContext = condition();
                  pattern.setContext(ifContext);
    thenDo = doAction();
                  pattern.setAction(thenDo);
                  {if (true) return pattern;}
    throw new Error("Missing return statement in function");
  }

  final public int patternID() throws ParseException {
  String id = "";
  Token aux;
    jj_consume_token(ACTION_PATTERN);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DIGIT:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_4;
      }
      aux = jj_consume_token(DIGIT);
     id = id + aux.toString();
    }
    jj_consume_token(RIGHT_BRACKET);
     System.out.println("ID: "+id);
     {if (true) return Integer.parseInt(id);}
    throw new Error("Missing return statement in function");
  }

  final public Occurs event() throws ParseException {
  Occurs onOccurs = null;
    jj_consume_token(ON_OCCURS);
    jj_consume_token(LEFT_BRACKET);
    onOccurs = primitiveEvent();
    jj_consume_token(FREQUENCY);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DIGIT:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_5;
      }
      jj_consume_token(DIGIT);
    }
   {if (true) return onOccurs;}
    throw new Error("Missing return statement in function");
  }

  final public Occurs primitiveEvent() throws ParseException {
  Occurs onOccurs = new Occurs();
    onOccurs = type(onOccurs);
    jj_consume_token(COMMA);
     onOccurs.setTime(timeConstant());
     {if (true) return onOccurs;}
    throw new Error("Missing return statement in function");
  }

  final public Occurs action(Occurs onOccurs) throws ParseException {
  String type;
        onOccurs = type(onOccurs);

          System.out.println("OUT OF TYPE");
    {if (true) return onOccurs;}
    throw new Error("Missing return statement in function");
  }

  final public Vector<Sensor > actionSet() throws ParseException {
        Vector<Sensor > actionSet = new Vector<Sensor>();
        Sensor sensor;
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LEFT_BRACKET:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_6;
      }
      jj_consume_token(LEFT_BRACKET);
    }
    sensor = onOccursSimpleActions();
                                              actionSet.add(sensor);
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ANDPERSAND:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_7;
      }
      actionSet = onOccursUnorderedActions(actionSet);
    }
      {if (true) return actionSet;}
    throw new Error("Missing return statement in function");
  }

  final public Sensor onOccursSimpleActions() throws ParseException {
  Sensor sensor = new Sensor();
    System.out.println("SIMPLE ACTION");
   sensor.setStatus(actionStatus());
    jj_consume_token(COMMA);
                                                 sensor.setId(device());
    {if (true) return sensor;}
    throw new Error("Missing return statement in function");
  }

  final public Sensor simpleActions() throws ParseException {
  Sensor sensor = new Sensor();
    System.out.println("SIMPLE ACTION");
    jj_consume_token(LEFT_BRACKET);
   sensor.setStatus(actionStatus());
    jj_consume_token(COMMA);
                                                 sensor.setId(device());
    {if (true) return sensor;}
    throw new Error("Missing return statement in function");
  }

  final public String device() throws ParseException {
  Token name;
  String auxiliar = "";
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DIGIT:
        name = jj_consume_token(DIGIT);
           auxiliar = auxiliar + name.toString();
        break;
      case ALPHABET:
        name = jj_consume_token(ALPHABET);
           auxiliar = auxiliar + name.toString();
        break;
      case UNDERSCORE:
        name = jj_consume_token(UNDERSCORE);
           auxiliar = auxiliar + name.toString();
        break;
      case CAPSALPHABET:
        name = jj_consume_token(CAPSALPHABET);
           auxiliar = auxiliar + name.toString();
        break;
      case LEFT_BRACKET:
        name = jj_consume_token(LEFT_BRACKET);
           auxiliar = auxiliar + name.toString();
           auxiliar = auxiliar + openBracket();
        break;
      case RIGHT_BRACKET:
        name = jj_consume_token(RIGHT_BRACKET);
           System.out.println("SALIDA : "+auxiliar);
           {if (true) return auxiliar;}
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LEFT_BRACKET:
      case RIGHT_BRACKET:
      case UNDERSCORE:
      case DIGIT:
      case ALPHABET:
      case CAPSALPHABET:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_8;
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public String openBracket() throws ParseException {
   Token name;
   String auxiliar = "";
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DIGIT:
        name = jj_consume_token(DIGIT);
           auxiliar = auxiliar + name.toString();
        break;
      case ALPHABET:
        name = jj_consume_token(ALPHABET);
           auxiliar = auxiliar + name.toString();
        break;
      case UNDERSCORE:
        name = jj_consume_token(UNDERSCORE);
           auxiliar = auxiliar + name.toString();
        break;
      case CAPSALPHABET:
        name = jj_consume_token(CAPSALPHABET);
           auxiliar = auxiliar + name.toString();
        break;
      case LEFT_BRACKET:
        name = jj_consume_token(LEFT_BRACKET);
           auxiliar = auxiliar + name.toString();
           auxiliar = openBracket();
        break;
      case RIGHT_BRACKET:
        name = jj_consume_token(RIGHT_BRACKET);
           auxiliar = auxiliar + name.toString();
           {if (true) return auxiliar;}
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LEFT_BRACKET:
      case RIGHT_BRACKET:
      case UNDERSCORE:
      case DIGIT:
      case ALPHABET:
      case CAPSALPHABET:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_9;
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public String actionStatus() throws ParseException {
  String status = "";
  Token aux;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ON:
      aux = jj_consume_token(ON);
                   status = status + aux.toString();
      break;
    case OFF:
      aux = jj_consume_token(OFF);
                                                                          status = status + aux.toString();
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
          {if (true) return status;}
    throw new Error("Missing return statement in function");
  }

  final public Vector<Sensor> unorderedActions(Vector<Sensor> sensors) throws ParseException {
  System.out.println("UNORDERED ACTION");
   sensors.add(simpleActions());
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ANDPERSAND:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_10;
      }
      jj_consume_token(ANDPERSAND);
      jj_consume_token(LEFT_BRACKET);
                                  sensors.add(simpleActions());
    }
          {if (true) return sensors;}
    throw new Error("Missing return statement in function");
  }

  final public Vector<Sensor> onOccursUnorderedActions(Vector<Sensor> sensors) throws ParseException {

    jj_consume_token(ANDPERSAND);
    jj_consume_token(LEFT_BRACKET);
                                 sensors.add(onOccursSimpleActions());
          {if (true) return sensors;}
    throw new Error("Missing return statement in function");
  }

  final public Occurs type(Occurs onOccurs) throws ParseException {
  String result = "";
  Sensor auxSensor;
  Token aux;
  Vector <Sensor> sensors = new Vector<Sensor>();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SIMPLE:
      aux = jj_consume_token(SIMPLE);
      jj_consume_token(COMMA);
      auxSensor = simpleActions();
    onOccurs.setType(aux.toString());
        sensors.add(auxSensor);
      break;
    case UNORDERED:
      aux = jj_consume_token(UNORDERED);
      jj_consume_token(COMMA);
      jj_consume_token(LEFT_BRACKET);
      sensors = unorderedActions(sensors);
      jj_consume_token(RIGHT_BRACKET);
                                                                                                      result = result + aux.toString();
      break;
    case START:
      aux = jj_consume_token(START);
      jj_consume_token(COMMA);
      jj_consume_token(HYPHEN);
      jj_consume_token(HYPHEN);
                                               result = result + aux.toString();
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
 //System.out.println("TYPE: "+result);
    onOccurs.setSensors(sensors);
    //System.out.println("LINE: "+input_stream.line+" COLUMN:"+input_stream.column);
    {if (true) return onOccurs;}
    throw new Error("Missing return statement in function");
  }

  final public String timeConstant() throws ParseException {
  String auxiliar = "";
  Token name;
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case RIGHT_BRACKET:
      case DIGIT:
      case ALPHABET:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_11;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DIGIT:
        name = jj_consume_token(DIGIT);
           auxiliar = auxiliar + name.toString();
        break;
      case RIGHT_BRACKET:
        name = jj_consume_token(RIGHT_BRACKET);
          // auxiliar = auxiliar + name.toString();
          // System.out.println("ENCONTRADO: "+auxiliar);
           {if (true) return auxiliar;}
        break;
      case ALPHABET:
        name = jj_consume_token(ALPHABET);
           auxiliar = auxiliar + name.toString();
        break;
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
          {if (true) return auxiliar;}
    throw new Error("Missing return statement in function");
  }

  final public IfContext condition() throws ParseException {
  IfContext ifContext = new IfContext();
    jj_consume_token(IF_CONTEXT);
    jj_consume_token(LEFT_BRACKET);
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LEFT_BRACKET:
        ;
        break;
      default:
        jj_la1[16] = jj_gen;
        break label_12;
      }
      attribute();
    }
    jj_consume_token(RIGHT_BRACKET);
    {if (true) return ifContext;}
    throw new Error("Missing return statement in function");
  }

  final public void primitiveQuantitativeCondition() throws ParseException {
    quantitativeCondition();
  }

  final public void primitiveQualitativeCondition() throws ParseException {
    qualitativeCondition();
  }

  final public IfContext attribute() throws ParseException {
  IfContext ifContext = new IfContext();
    jj_consume_token(LEFT_BRACKET);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LEFT_BRACKET:
      calendar();
      break;
    case UNDERSCORE:
    case DIGIT:
    case ALPHABET:
    case CAPSALPHABET:
      sensor();
      break;
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    label_13:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LEFT_BRACKET:
      case UNDERSCORE:
      case DIGIT:
      case ALPHABET:
      case CAPSALPHABET:
      case 49:
        ;
        break;
      default:
        jj_la1[18] = jj_gen;
        break label_13;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 49:
        jj_consume_token(49);
        calendar();
        break;
      case LEFT_BRACKET:
      case UNDERSCORE:
      case DIGIT:
      case ALPHABET:
      case CAPSALPHABET:
        sensor();
        break;
      default:
        jj_la1[19] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(RIGHT_BRACKET);
    jj_consume_token(LEFT_BRACKET);
    ifContext = getPriority(ifContext);
    jj_consume_token(RIGHT_BRACKET);
          {if (true) return ifContext;}
    throw new Error("Missing return statement in function");
  }

  final public IfContext getPriority(IfContext ifContext) throws ParseException {
  Token minus = null, priority = null;
    jj_consume_token(PRIORITY);
    label_14:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case HYPHEN:
        ;
        break;
      default:
        jj_la1[20] = jj_gen;
        break label_14;
      }
      minus = jj_consume_token(HYPHEN);
    }
    label_15:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DIGIT:
        ;
        break;
      default:
        jj_la1[21] = jj_gen;
        break label_15;
      }
      priority = jj_consume_token(DIGIT);
    }
                if(minus != null) {
                        ifContext.setPriority(-1 * Integer.valueOf(priority.toString()));
                } else {
                        ifContext.setPriority(Integer.valueOf(priority.toString()));
                }
                {if (true) return ifContext;}
    throw new Error("Missing return statement in function");
  }
